[package]
name = "fluor"
version = "0.1.4"
authors = ["Richard do Nascimento Fagundes <richardnas_@outlook.com>"]
edition = "2018"

[dependencies]
hyper = { version = "1.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.20"